Name:                cassy
Version:             0.4.0.1
Synopsis:            A high level driver for the Cassandra datastore
License:             BSD3
License-file:        LICENSE
Author:              Ozgun Ataman
Maintainer:          ozataman@gmail.com
Homepage:            http://github.com/ozataman/cassy
Category:            Data
Build-type:          Simple
description:
  The objective is to completely isolate away the thrift layer, providing
  a more idiomatic Haskell experience working with Cassandra.
  .
  Certain parts of the API was inspired by pycassa (Python client) and
  hscassandra (on Hackage).
  .
  Please see the Github repository for more detailed documentation,
  release notes and examples.
  .
  A brief explanation of modules:
  . 
  * /Database.Cassandra.Basic/: Contains a low level, simple
    implementation of Cassandra interaction using the thrift API
    underneath.
  .
  * /Database.Cassandra.JSON/: A higher level API that operates on
    values with ToJSON and FromJSON isntances from the /aeson/
    library. This module has in part been inspired by Bryan
    O\'Sullivan\'s /riak/ client for Haskell.
  .
  * /Database.Cassandra.Pool/: Handles a /pool/ of connections to
    multiple servers in a cluster, splitting the load among them.
  .
  * /Database.Cassandra.Pack/: Handles column types that Cassandra
    recognizes and adds support for Composite Columns.
  .
  * /Database.Cassandra.Types/: A common set of types used everywhere.
  .
  Potential TODOs include:
  .
  * Support for counters and batch mutators
  .
  * Support for database admin operations

-- Extra-source-files:  

Cabal-version:       >=1.8



Library
  hs-source-dirs: src
  Exposed-modules:
    Database.Cassandra.Basic
    Database.Cassandra.JSON
    Database.Cassandra.Pool
    Database.Cassandra.Types
    Database.Cassandra.Pack

  Build-depends:
      base >= 4 && < 5
    , bytestring
    , binary
    , containers
    , network
    , time
    , mtl
    , stm
    , syb
    , text
    , attoparsec                >= 0.10    && < 0.11
    , aeson
    , Thrift >= 0.6
    , cassandra-thrift >= 0.8
    , resource-pool
    , errors
    , data-default


test-suite test
  type: exitcode-stdio-1.0
  main-is: Test.hs
  ghc-options: -Wall
  hs-source-dirs: test src
  Build-depends:
      base >= 4 && < 5
    , bytestring
    , binary
    , containers
    , network
    , time
    , mtl
    , stm
    , syb
    , text
    , attoparsec                >= 0.10    && < 0.11
    , aeson
    , Thrift >= 0.6
    , cassandra-thrift >= 0.8
    , resource-pool
    , errors
    , data-default

    , test-framework >= 0.6
    , test-framework-quickcheck2 >= 0.2.12.2
    , test-framework-hunit >= 0.2.7
    , QuickCheck
    , HUnit
    , derive  
